# pipecat-sonos-voice-assistant

./: README.md  mcp_registry.py  mcp_registry_config.json  pyproject.toml  server.py
